--- a/portfolio/src/App.css
+++ b/portfolio/src/App.css
@@ -6,7 +6,22 @@ html {
   background-image: url('./images/coding.jpg')
 }
 
-#header header {
+#header {
   color: white;
+  margin-top: 100px;
+}
+
+#header h1 {
+  font-size: 5rem;
+  font-weight: bold;
+  -webkit-text-stroke: 0.25px black;
+}
+
+
+
+.center-scroll {
+  background: white;
+  width: 50%;
+  margin: 0 auto;
 }
 
