--- a/portfolio/src/index.css
+++ b/portfolio/src/index.css
@@ -52,7 +52,7 @@ body {
   padding: 0;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  font-family: "Raleway", "Helvetica", sans-serif;
+  font-family: "Montserrat", "Helvetica", sans-serif;
 }
 
 code {
