--- a/portfolio/src/App.css
+++ b/portfolio/src/App.css
@@ -14,14 +14,14 @@ html {
 #header h1 {
   font-size: 5rem;
   font-weight: bold;
-  text-transform: uppercase;
+  /* text-transform: uppercase; */
 }
 
 #header p {
   font-size: 2.5rem;
   font-weight: bolder;
   font-style: italic;
-  text-transform: uppercase;
+  /* text-transform: uppercase; */
   color: rgb(87, 153, 206);
 }
 
