--- a/portfolio/src/components/Contact.css
+++ b/portfolio/src/components/Contact.css
@@ -16,12 +16,25 @@ form {
     justify-content: center;
 }
 
+@media (max-width: 700px) {
+    form {
+        margin-top: 30px;
+    }
+}
+
 input {
     font-size: 2rem;
     width: 45%;
     border: none;
     padding: 5px;
     margin: 30px 5px 20px 5px;
+}
+
+@media (max-width: 700px) {
+    input {
+        width: 100%;
+        margin: 0px 5px 20px 5px;
+    }
 }
 
 textarea {
