--- a/portfolio/src/components/Contact.css
+++ b/portfolio/src/components/Contact.css
@@ -69,3 +69,18 @@ textarea {
     width: auto;
     padding: 5px 20px;
 }
+
+.links h3 {
+    margin: 30px 0 15px 0;
+    font-size: 2rem;
+    color: white;
+}
+
+.links a {
+    margin: 10px;
+}
+
+.links img {
+    width: 50px;
+    height: 50px;
+}
